Moving to laptop

--- a/Thermomechanics.bib
+++ b/Thermomechanics.bib
@@ -2490,7 +2490,7 @@ publisher: Elsevier},
 	year = {2003},
 	keywords = {classified, read},
 	pages = {805--812},
-	file = {Matthies and Steindorf - 2003 - Partitioned Strong Coupling Algorithms for Fluid-S.pdf:/home/zeluis/Zotero/storage/7GAUH4XQ/Matthies and Steindorf - 2003 - Partitioned Strong Coupling Algorithms for Fluid-S.pdf:application/pdf;Matthies_Steindorf_2003_Partitioned strong coupling algorithms for fluid{\textendash}structure interaction.pdf:/home/zeluis/Zotero/storage/DPYEPQQS/Matthies_Steindorf_2003_Partitioned strong coupling algorithms for fluid{\textendash}structure interaction.pdf:application/pdf},
+	file = {Matthies and Steindorf - 2003 - Partitioned Strong Coupling Algorithms for Fluid-S.pdf:/home/zeluis/Zotero/storage/7GAUH4XQ/Matthies and Steindorf - 2003 - Partitioned Strong Coupling Algorithms for Fluid-S.pdf:application/pdf;Matthies_Steindorf_2003_Partitioned strong coupling algorithms for fluid{\textendash}structure interaction.pdf:/home/zeluis/Zotero/storage/DPYEPQQS/Matthies_Steindorf_2003_Partitioned strong coupling algorithms for fluid{\textendash}structure interaction.pdf:application/pdf;1-s2.0-S0045794902004091-main.pdf:/home/zeluis/Zotero/storage/9I59X2BX/1-s2.0-S0045794902004091-main.pdf:application/pdf},
 }
 
 @article{kim_stability_2011-2,
@@ -3474,4 +3474,26 @@ publisher: Elsevier},
 	publisher = {SIAM},
 	author = {Sidi, Avram},
 	year = {2017},
+}
+
+@book{kelley_solving_2003,
+	series = {Fundamentals of {Algorithms}},
+	title = {Solving {Nonlinear} {Equations} with {Newton}'s {Method}},
+	isbn = {978-0-89871-889-8},
+	url = {https://books.google.pt/books?id=DBytF-STafYC},
+	publisher = {Society for Industrial and Applied Mathematics},
+	author = {Kelley, C.T.},
+	year = {2003},
+	lccn = {2003050663},
+}
+
+@book{dennis_numerical_1996,
+	series = {Classics in {Applied} {Mathematics}},
+	title = {Numerical {Methods} for {Unconstrained} {Optimization} and {Nonlinear} {Equations}},
+	isbn = {978-0-89871-364-0},
+	url = {https://books.google.pt/books?id=4y1IDOXNOqMC},
+	publisher = {Society for Industrial and Applied Mathematics},
+	author = {Dennis, J.E. and Schnabel, R.B.},
+	year = {1996},
+	lccn = {lc95051776},
 }
