Most recent version of the chapter on implicit methods for the coupling problem.

--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,7 @@
 \usepackage{makecell}
 \usepackage{footnote}
 \usepackage{booktabs}
+\usepackage{lscape}
 \makesavenoteenv{tabular}
 
 % Algorithm
