Most recent version

--- a/Thermomechanics.bib
+++ b/Thermomechanics.bib
@@ -3508,3 +3508,56 @@ publisher: Elsevier},
 	note = {Publisher: JSTOR},
 	pages = {577--593},
 }
+
+@article{danilovskaya_dynamical_1952,
+	title = {On a dynamical problem of thermoelasticity},
+	volume = {16},
+	number = {3},
+	journal = {Prikl. Mat. Mekh},
+	author = {Danilovskaya, VI},
+	year = {1952},
+	pages = {341--344},
+}
+
+@article{tamma_effective_1992,
+	title = {An effective finite element modeling/analysis approach for dynamic thermoelasticity due to second sound effects},
+	volume = {9},
+	number = {2},
+	journal = {Computational mechanics},
+	author = {Tamma, Kumar K and Namburu, Raju R},
+	year = {1992},
+	note = {Publisher: Springer},
+	pages = {73--84},
+	file = {Tamma_Namburu_1992_An effective finite element modeling-analysis approach for dynamic thermoelasticity due to second sound effects.pdf:/home/jose/Zotero/storage/PMHAT4ZP/Tamma_Namburu_1992_An effective finite element modeling-analysis approach for dynamic thermoelasticity due to second sound effects.pdf:application/pdf},
+}
+
+@article{tanaka_application_1995-1,
+	title = {Application of boundary element method to 3-{D} problems of coupled thermoelasticity},
+	volume = {16},
+	number = {4},
+	journal = {Engineering analysis with boundary elements},
+	author = {Tanaka, Masa and Matsumoto, T and Moradi, M},
+	year = {1995},
+	note = {Publisher: Elsevier},
+	pages = {297--303},
+	file = {Tanaka_Matsumoto_Moradi_1995_Application of boundary element method to 3-D problems of coupled thermoelasticity.pdf:/home/jose/Zotero/storage/MEQYD9UT/Tanaka_Matsumoto_Moradi_1995_Application of boundary element method to 3-D problems of coupled thermoelasticity.pdf:application/pdf},
+}
+
+@article{tosaka_boundary_1991,
+	title = {Boundary element analysis of dynamic coupled thermoelasticity problems},
+	volume = {8},
+	number = {5},
+	journal = {Computational mechanics},
+	author = {Tosaka, N and Suh, IG},
+	year = {1991},
+	note = {Publisher: Springer},
+	pages = {331--342},
+	file = {Tosaka_Suh_1991_Boundary element analysis of dynamic coupled thermoelasticity problems.pdf:/home/jose/Zotero/storage/3TRHJ8ZK/Tosaka_Suh_1991_Boundary element analysis of dynamic coupled thermoelasticity problems.pdf:application/pdf},
+}
+
+@book{nickell_extended_1967,
+	title = {The extended {Ritz} method applied to transient, coupled thermoelastic boundary-value problems},
+	publisher = {Structural Engineering Laboratory, University of California},
+	author = {Nickell, Robert E and Sackman, Jerome L},
+	year = {1967},
+}
