--- a/validation_thermal_solver.tex
+++ b/validation_thermal_solver.tex
@@ -1,4 +1,4 @@
-\chapter{Validation results for the thermaal solver}
+\chapter{Validation results for the thermal solver}
 
 This chapter provides validation results for the thermal solver implemented in this work.
 The appropriate examples are sourced from DIN EN 1991-1-2/NA:2010-12: Anhang CC - Prüfung und  Validierung von Rechenprogramm für Brand\-schutz\-nach\-weise mittels allgemeiner Rechenverfahren \cite{} and the linear thermo-elastic test in the standard NAFEMS benchmarks \cite{}.
