--- a/main.tex
+++ b/main.tex
@@ -369,8 +369,9 @@
 \include{thermo_problem}
 \include{thermo_mechanical_problem}
 \include{solvers_for_coupled_fields}
-% \include{validation_thermal_solver}
+\include{validation_thermal_solver}
 \include{acceleration_techniques}
+\include{validation_acceleration}
 % \include{conclusions}
 \appendix
 % \include{annex}
