1st version thick cylinder single iter and Broyden-like

--- a/Thermomechanics.bib
+++ b/Thermomechanics.bib
@@ -182,7 +182,7 @@
 	year = {2015},
 	keywords = {Convergence acceleration, Multi-field problems, Partitioned solution strategy, Thermal radiation, classified, read},
 	pages = {327--351},
-	file = {wendt_et_al_2015_partitioned_coupling_strategies_for_multi-physically_coupled_radiative_heat.pdf:/home/jose/Zotero/storage/HVSS524H/wendt2015.pdf:application/pdf},
+	file = {wendt_et_al_2015_partitioned_coupling_strategies_for_multi-physically_coupled_radiative_heat.pdf:/home/jose/Zotero/storage/HVSS524H/wendt_et_al_2015_partitioned_coupling_strategies_for_multi-physically_coupled_radiative_heat.pdf:application/pdf},
 }
 
 @article{rothe_monolithic_2015,
@@ -219,7 +219,7 @@
 	year = {2015},
 	keywords = {classified, read},
 	pages = {1075--1101},
-	file = {erbts_et_al_2015_a_partitioned_solution_approach_for_electro-thermo-mechanical_problems.pdf:/home/jose/Zotero/storage/VD6N3I7V/erbts_et_al_2015_a_partitioned_solution_approach_for_electro-thermo-mechanical_problems.pdf:application/pdf;erbts_et_al_2015_a_partitioned_solution_approach_for_electro-thermo-mechanical_problems.pdf:/home/jose/Zotero/storage/5ENPW4Q5/erbts2014.pdf:application/pdf},
+	file = {erbts_et_al_2015_a_partitioned_solution_approach_for_electro-thermo-mechanical_problems.pdf:/home/jose/Zotero/storage/VD6N3I7V/erbts_et_al_2015_a_partitioned_solution_approach_for_electro-thermo-mechanical_problems.pdf:application/pdf;erbts_et_al_2015_a_partitioned_solution_approach_for_electro-thermo-mechanical_problems.pdf:/home/jose/Zotero/storage/5ENPW4Q5/erbts_et_al_2015_a_partitioned_solution_approach_for_electro-thermo-mechanical_problems.pdf:application/pdf},
 }
 
 @article{liu_heat-assisted_2018,
@@ -1156,7 +1156,7 @@
 	year = {2016},
 	keywords = {Convergence acceleration, Partitioned approach, C++, Multifield problems, classified, to read},
 	pages = {1764--1789},
-	file = {k{\"o}nig_et_al_2016_a_flexible_c++_framework_for_the_partitioned_solution_of_strongly_coupled.pdf:/home/jose/Zotero/storage/GMP5XQ7T/10.1016@j.camwa.2016.07.031.pdf:application/pdf;ScienceDirect Snapshot:/home/jose/Zotero/storage/Z5VTEWIN/S0898122116304369.html:text/html},
+	file = {k{\"o}nig_et_al_2016_a_flexible_c++_framework_for_the_partitioned_solution_of_strongly_coupled.pdf:/home/jose/Zotero/storage/GMP5XQ7T/k{\"o}nig_et_al_2016_a_flexible_c++_framework_for_the_partitioned_solution_of_strongly_coupled.pdf:application/pdf;ScienceDirect Snapshot:/home/jose/Zotero/storage/Z5VTEWIN/S0898122116304369.html:text/html},
 }
 
 @article{badia_block_2014,
@@ -3560,4 +3560,23 @@ publisher: Elsevier},
 	publisher = {Structural Engineering Laboratory, University of California},
 	author = {Nickell, Robert E and Sackman, Jerome L},
 	year = {1967},
+}
+
+@incollection{ibrahimbegovic_thermodynamics_2009,
+	address = {Dordrecht},
+	title = {Thermodynamics and solution methods for coupled problems},
+	volume = {160},
+	isbn = {978-90-481-2330-8 978-90-481-2331-5},
+	url = {http://link.springer.com/10.1007/978-90-481-2331-5_7},
+	language = {en},
+	urldate = {2022-07-09},
+	booktitle = {Nonlinear {Solid} {Mechanics}},
+	publisher = {Springer Netherlands},
+	author = {Ibrahimbegovic, Adnan},
+	collaborator = {Ibrahimbegovic, Adnan},
+	year = {2009},
+	doi = {10.1007/978-90-481-2331-5_7},
+	note = {Series Title: Solid Mechanics and its Applications},
+	pages = {427--474},
+	file = {Ibrahimbegovic2009_Chapter_ThermodynamicsAndSolutionMetho.pdf:/home/jose/Zotero/storage/9I7KL8IR/Ibrahimbegovic2009_Chapter_ThermodynamicsAndSolutionMetho.pdf:application/pdf},
 }
